# seqra

./: .gitignore  .goreleaser.yaml  .releaserc.json  CHANGELOG.md  Dockerfile  Makefile  README.md  agent-pipeline.md  approximations-config.md  build.gradle.kts  design-changes.md  edges-knowledge.md  go-dataflow-design.md  go-dataflow-implementation-details.md  go-dataflow-test-system.md  go-task.md  go.mod  go.sum  main.go  migrate-to-kt.md  pattern-rules.md  plan-dataflow-plan.md  plan.md  python-dataflow-design.md  python-dataflow-implementation-details.md  python-dataflow-task.md  python-dataflow-test-system.md  quality-plan.md  release-notes-transform.cjs  settings.gradle.kts  task.md
agent/: meta-prompt.md
agent-mode/: mismatch.md  mitigation-plan.md  plan.md  test-status.md
core/opentaint-ir/python/: FEATURES.md  build.gradle.kts  pyproject.toml  quality-plan.md  requirements.txt  settings.gradle.kts  setup.py  test_requirements.txt
core/opentaint-ir/python/opentaint-ir-api-python/: build.gradle.kts
core/opentaint-ir/python/opentaint-ir-api-python/src/main/kotlin/org/opentaint/ir/api/python/: Cfg.kt  Entities.kt  Instructions.kt  PIRPhysicalLocation.kt  Types.kt  Values.kt  Visitors.kt
core/opentaint-ir/python/opentaint-ir-impl-python/: build.gradle.kts
core/opentaint-ir/python/opentaint-ir-impl-python/src/main/kotlin/org/opentaint/ir/impl/python/: PIRClasspathImpl.kt  PIRClasspathLoader.kt  PIRImplData.kt  PIRLocationImpl.kt  PIRProcessManager.kt
core/opentaint-ir/python/opentaint-ir-impl-python/src/main/kotlin/org/opentaint/ir/impl/python/builder/: CfgBuilder.kt  ExpressionLowering.kt  FlatIR.kt  MypyModuleBuilder.kt  ProtoToFlatBuilder.kt
core/opentaint-ir/python/opentaint-ir-test-python/: build.gradle.kts  web-projects.txt
core/opentaint-ir/python/opentaint-ir-test-python/src/test/kotlin/org/opentaint/ir/test/python/: PIRTestBase.kt
core/opentaint-ir/python/pir_server/: executor.py  service.py
core/opentaint-ir/python/pir_server/builder/: __init__.py  ast_serializer.py  project_builder.py  type_mapper.py
core/opentaint-ir/python/pir_server/proto/: __init__.py
core/opentaint-ir/python/proto/: pir.proto
github/zap/: README.md  action.yml  filter_sarif.py  gen_auto.py  pyproject.toml  template.yaml
github/zap/examples/: example-full-scan.yml  example.yml
(+3955 files in other folders)
