[build-system]
requires = ["setuptools>=68.0", "grpcio-tools>=1.78.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pir-server"
version = "0.1.0"
description = "PIR gRPC Server — Python-side mypy analysis and AST serialization"
requires-python = ">=3.10"
dependencies = [
    "grpcio>=1.78.0",
    "protobuf>=6.31.1",
    "mypy>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "grpcio-tools>=1.78.0",
]
benchmarks = [
    "click==8.3.1",
    "requests==2.32.5",
    "attrs==25.4.0",
    "typer==0.24.1",
    "rich==14.3.3",
    "pygments==2.19.2",
    "urllib3==2.6.3",
    "packaging==26.0",
    "cryptography==46.0.5",
    "more-itertools==10.8.0",
    "idna==3.11",
    "charset-normalizer==3.4.4",
    "markdown-it-py==4.0.0",
    "shellingham==1.5.4",
    "mdurl==0.1.2",
    "markupsafe==3.0.3",
    "flask==3.1.3",
    "django==6.0.3",
    "fastapi==0.135.1",
    "starlette==1.0.0",
    "werkzeug==3.1.6",
    "jinja2==3.1.6",
    "tornado==6.5.5",
    "falcon==4.2.0",
    "bottle==0.13.4",
    "pyramid==2.1",
    "sanic==25.12.0",
    "aiohttp==3.13.3",
    "celery==5.6.2",
    "pydantic==2.12.5",
    "sqlalchemy==2.0.48",
    "marshmallow==4.2.2",
    "httpx==0.28.1",
    "httpcore==1.0.9",
    "pyyaml==6.0.3",
    "mako==1.3.10",
    "markdown==3.10.2",
    "tqdm==4.67.3",
    "pycparser==2.23",
    "pyparsing==3.3.2",
    "pathspec==1.0.4",
    "typeguard==4.5.0",
    "anyio==4.12.1",
    "filelock==3.24.0",
    "lxml==6.0.2",
]

[project.scripts]
pir-server = "pir_server.__main__:main"

[tool.setuptools.packages.find]
include = ["pir_server*"]
